--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "dream-future": ".",
     "lucide-react": "^0.574.0",
+    "motion": "^12.34.1",
     "next": "16.1.6",
     "postcss": "^8.5.6",
     "radix-ui": "^1.4.3",
