--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "lucide-react": "^0.574.0",
     "motion": "^12.34.1",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.1",
     "tailwindcss": "^4.1.18"
   },
