--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dream-future": ".",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.574.0",
     "motion": "^12.34.1",
     "next": "16.1.6",
@@ -23,7 +24,8 @@
     "react-dom": "19.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.1",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/node": "^20",
