--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.574.0",
     "mongoose": "^9.2.1",
+    "motion": "^12.34.3",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
